improved the UI

--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
                     </div>
                 </div>
                 <div class="gallery-item fade-in">
-                    <img src="public/Rabindranath.jpg" alt="Recitation Class">
+                    <img src="public/Rabindranath1.png" alt="Recitation Class">
                     <div class="gallery-overlay">
                         <h3>Recitation Classes</h3>
                         <p>Learning Bengali Poetry</p>
                     </div>
                 </div>
                 <div class="gallery-item fade-in">
-                    <img src="public/najrul.jpg" alt="Workshop">
+                    <img src="public/najrul1.png" alt="Workshop">
                     <div class="gallery-overlay">
                         <h3>Acting Workshop</h3>
                         <p>Weekend Drama Session</p>
