--- a/admin/index.html
+++ b/admin/index.html
@@ -48,13 +48,24 @@
                 </div>
                 <form id="loginForm" class="login-form">
                     <div class="form-group">
+                        <label for="adminEmail">
+                            <i class="fas fa-envelope"></i> Email Address
+                        </label>
+                        <input 
+                            type="email" 
+                            id="adminEmail" 
+                            placeholder="Enter your email" 
+                            required
+                        >
+                    </div>
+                    <div class="form-group">
                         <label for="adminPassword">
-                            <i class="fas fa-lock"></i> Admin Password
+                            <i class="fas fa-lock"></i> Password
                         </label>
                         <input 
                             type="password" 
                             id="adminPassword" 
-                            placeholder="Enter admin password" 
+                            placeholder="Enter your password" 
                             required
                         >
                     </div>
@@ -79,6 +90,15 @@
                 <a href="#events-management" class="menu-item" data-section="events">
                     <i class="fas fa-calendar-alt"></i>
                     <span>Events & Programs</span>
+                </a>
+                <a href="#class-details-management" class="menu-item" data-section="class-details">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <span>Edit Class Details</span>
+                </a>
+                <a href="#messages-management" class="menu-item" data-section="messages">
+                    <i class="fas fa-envelope"></i>
+                    <span>Contact Messages</span>
+                    <span class="badge" id="unreadBadge" style="display: none;">0</span>
                 </a>
             </nav>
         </aside>
@@ -115,6 +135,51 @@
                     <!-- Event items will be loaded here -->
                     <div class="loading">
                         <i class="fas fa-spinner fa-spin"></i> Loading events...
+                    </div>
+                </div>
+            </section>
+
+            <!-- Class Details Management Section -->
+            <section id="class-details-management" class="management-section">
+                <div class="section-header-admin">
+                    <h2><i class="fas fa-chalkboard-teacher"></i> Class Details Management</h2>
+                    <button class="btn-add" id="addClassBtn">
+                        <i class="fas fa-plus"></i> Add Class
+                    </button>
+                </div>
+
+                <div class="items-grid" id="classDetailsItemsGrid">
+                    <!-- Class items will be loaded here -->
+                    <div class="loading">
+                        <i class="fas fa-spinner fa-spin"></i> Loading class details...
+                    </div>
+                </div>
+            </section>
+
+            <!-- Contact Messages Management Section -->
+            <section id="messages-management" class="management-section">
+                <div class="section-header-admin">
+                    <h2><i class="fas fa-envelope"></i> Contact Messages</h2>
+                    <div class="messages-filter">
+                        <button class="btn-filter active" data-filter="all" id="filterAll">
+                            <i class="fas fa-inbox"></i> All
+                        </button>
+                        <button class="btn-filter" data-filter="unread" id="filterUnread">
+                            <i class="fas fa-envelope"></i> Unread
+                        </button>
+                        <button class="btn-filter" data-filter="read" id="filterRead">
+                            <i class="fas fa-envelope-open"></i> Read
+                        </button>
+                        <button class="btn-refresh" id="refreshMessagesBtn">
+                            <i class="fas fa-sync-alt"></i> Refresh
+                        </button>
+                    </div>
+                </div>
+
+                <div id="messagesContainer" class="messages-container">
+                    <!-- Messages will be loaded here -->
+                    <div class="loading">
+                        <i class="fas fa-spinner fa-spin"></i> Loading messages...
                     </div>
                 </div>
             </section>
@@ -242,6 +307,59 @@
                     <button type="button" class="btn-cancel" data-modal="eventModal">Cancel</button>
                     <button type="submit" class="btn-save">
                         <i class="fas fa-save"></i> Save Event
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Class Details Modal -->
+    <div id="classModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="classModalTitle">Add Class Details</h3>
+                <button class="modal-close" data-modal="classModal">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <form id="classForm" class="modal-form">
+                <input type="hidden" id="classId">
+                
+                <div class="form-group">
+                    <label for="classSubject">Subject *</label>
+                    <input type="text" id="classSubject" required placeholder="e.g., Rabindra Sangeet, Tabla, Classical Dance">
+                </div>
+
+                <div class="form-group">
+                    <label for="classBranch">Branch *</label>
+                    <input type="text" id="classBranch" required placeholder="e.g., Saltlake Branch, Park Street Branch">
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="classDay">Day *</label>
+                        <select id="classDay" required>
+                            <option value="">Select Day</option>
+                            <option value="Sunday">Sunday</option>
+                            <option value="Monday">Monday</option>
+                            <option value="Tuesday">Tuesday</option>
+                            <option value="Wednesday">Wednesday</option>
+                            <option value="Thursday">Thursday</option>
+                            <option value="Friday">Friday</option>
+                            <option value="Saturday">Saturday</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="classTimings">Timings *</label>
+                        <input type="text" id="classTimings" required placeholder="e.g., 3:00 PM - 8:00 PM">
+                    </div>
+                </div>
+
+                <div class="modal-actions">
+                    <button type="button" class="btn-cancel" data-modal="classModal">Cancel</button>
+                    <button type="submit" class="btn-save">
+                        <i class="fas fa-save"></i> Save Class
                     </button>
                 </div>
             </form>
