--- a/admin/index.html
+++ b/admin/index.html
@@ -30,6 +30,9 @@
                 <a href="index.html" class="btn-view-site" target="_blank">
                     <i class="fas fa-external-link-alt"></i> View Site
                 </a>
+                <a href="https://anuranan-emp-portal.netlify.app/login" class="btn-view-site" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Employee Portal
+                </a>
                 <button class="btn-logout" id="logoutBtn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
@@ -300,6 +303,20 @@
                     <div class="form-group">
                         <label for="eventLocation">Location *</label>
                         <input type="text" id="eventLocation" required placeholder="e.g., Main Auditorium">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="eventPhoto">Event Photo</label>
+                    <input type="file" id="eventPhoto" accept="image/*">
+                    <small style="display: block; margin-top: 5px; color: #666;">
+                        <i class="fas fa-info-circle"></i> Optional. Upload a photo for this event (JPG, PNG, etc.)
+                    </small>
+                    <div id="eventPhotoPreview" style="margin-top: 10px; display: none;">
+                        <img id="eventPhotoPreviewImg" style="max-width: 100%; max-height: 200px; border-radius: 8px; object-fit: cover;" alt="Event photo preview">
+                        <button type="button" id="removeEventPhoto" class="btn-delete-item" style="margin-top: 10px; padding: 5px 10px; font-size: 12px;">
+                            <i class="fas fa-trash"></i> Remove Photo
+                        </button>
                     </div>
                 </div>
 
