--- a/admin/index.html
+++ b/admin/index.html
@@ -94,6 +94,10 @@
                     <i class="fas fa-calendar-alt"></i>
                     <span>Events & Programs</span>
                 </a>
+                <a href="courses.html" class="menu-item">
+                    <i class="fas fa-book"></i>
+                    <span>Course Management</span>
+                </a>
                 <a href="#class-details-management" class="menu-item" data-section="class-details">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <span>Edit Class Details</span>
