--- a/website/index.html
+++ b/website/index.html
@@ -220,134 +220,10 @@
                 </p>
             </div>
             <div class="courses-grid">
-                <div class="course-card fade-in">
-                    <div class="course-icon">
-                        <i class="fas fa-book-open"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>Bengali Recitation</h3>
-                        <span class="course-badge">Popular</span>
-                    </div>
-                    <p class="course-description">
-                        Immerse yourself in the beauty of Bengali poetry. Learn to recite works of 
-                        Rabindranath Tagore, Kazi Nazrul Islam, Sukumar Ray, and other legendary poets 
-                        with proper pronunciation, emotion, and expression.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> Classical & Modern Poetry</li>
-                        <li><i class="fas fa-check"></i> Voice Modulation Techniques</li>
-                        <li><i class="fas fa-check"></i> Stage Presence Training</li>
-                        <li><i class="fas fa-check"></i> Competition Preparation</li>
-                    </ul>
-                    <a href="#contact" class="course-btn">Enroll Now</a>
-                </div>
-
-                <div class="course-card fade-in">
-                    <div class="course-icon">
-                        <i class="fas fa-language"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>English Recitation</h3>
-                    </div>
-                    <p class="course-description">
-                        Master the art of English poetry recitation with confidence. From Shakespeare 
-                        to contemporary poets, develop your linguistic skills and stage confidence 
-                        through expert guidance.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> British & American Poetry</li>
-                        <li><i class="fas fa-check"></i> Accent & Diction Training</li>
-                        <li><i class="fas fa-check"></i> Performance Skills</li>
-                        <li><i class="fas fa-check"></i> Public Speaking Basics</li>
-                    </ul>
-                    <a href="#contact" class="course-btn">Enroll Now</a>
-                </div>
-
-                <div class="course-card fade-in">
-                    <div class="course-icon">
-                        <i class="fas fa-scroll"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>Hindi Recitation</h3>
-                    </div>
-                    <p class="course-description">
-                        Explore the richness of Hindi literature through recitation. Learn to present 
-                        works of renowned Hindi poets with authenticity, emotion, and cultural understanding.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> Classical Hindi Poetry</li>
-                        <li><i class="fas fa-check"></i> Expression Development</li>
-                        <li><i class="fas fa-check"></i> Cultural Context Learning</li>
-                        <li><i class="fas fa-check"></i> Performance Practice</li>
-                    </ul>
-                    <a href="#contact" class="course-btn">Enroll Now</a>
-                </div>
-
-                <div class="course-card fade-in">
-                    <div class="course-icon">
-                        <i class="fas fa-microphone-alt"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>Anchoring Classes</h3>
-                        <span class="course-badge new">New</span>
-                    </div>
-                    <p class="course-description">
-                        Develop the skills to host events with confidence and charisma. Learn script 
-                        writing, stage presence, audience engagement, and professional anchoring 
-                        techniques for various occasions.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> Event Hosting Skills</li>
-                        <li><i class="fas fa-check"></i> Script Writing & Delivery</li>
-                        <li><i class="fas fa-check"></i> Confidence Building</li>
-                        <li><i class="fas fa-check"></i> Live Event Practice</li>
-                    </ul>
-                    <a href="#contact" class="course-btn">Enroll Now</a>
-                </div>
-
-                <div class="course-card fade-in">
-                    <div class="course-icon">
-                        <i class="fas fa-theater-masks"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>Acting Workshops</h3>
-                    </div>
-                    <p class="course-description">
-                        Unleash your dramatic potential through comprehensive acting training. Learn 
-                        character development, improvisation, dialogue delivery, and stage/camera 
-                        performance techniques.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> Character Building</li>
-                        <li><i class="fas fa-check"></i> Improvisation Training</li>
-                        <li><i class="fas fa-check"></i> Dialogue Delivery</li>
-                        <li><i class="fas fa-check"></i> Theatre Performance</li>
-                    </ul>
-                    <a href="#contact" class="course-btn">Enroll Now</a>
-                </div>
-
-                <div class="course-card featured-card fade-in">
-                    <div class="featured-badge">
-                        <i class="fas fa-crown"></i> Special Offer
-                    </div>
-                    <div class="course-icon">
-                        <i class="fas fa-gift"></i>
-                    </div>
-                    <div class="course-header">
-                        <h3>Combo Package</h3>
-                        <span class="course-badge">Save 30%</span>
-                    </div>
-                    <p class="course-description">
-                        Get comprehensive training across multiple disciplines. Our combo package offers 
-                        excellent value for students who want to explore various aspects of performing arts.
-                    </p>
-                    <ul class="course-features">
-                        <li><i class="fas fa-check"></i> Any 3 Courses Combined</li>
-                        <li><i class="fas fa-check"></i> Personalized Attention</li>
-                        <li><i class="fas fa-check"></i> Flexible Schedule</li>
-                        <li><i class="fas fa-check"></i> Priority Event Participation</li>
-                    </ul>
-                    <a href="#contact" class="course-btn featured-btn">Get Special Offer</a>
+                <!-- Courses will be loaded dynamically from Supabase -->
+                <div class="loading-spinner" style="grid-column: 1 / -1; text-align: center; padding: 40px;">
+                    <i class="fas fa-spinner fa-spin" style="font-size: 32px; color: var(--primary-blue);"></i>
+                    <p style="margin-top: 15px; color: var(--text-gray);">Loading courses...</p>
                 </div>
             </div>
         </div>
