Improved more YYYY

--- a/website/index.html
+++ b/website/index.html
@@ -281,47 +281,10 @@
                 </p>
             </div>
             <div class="gallery-grid">
-                <div class="gallery-item fade-in">
-                    <img src="public/main.jpg" alt="Student Performance">
-                    <div class="gallery-overlay">
-                        <h3>Student Performances</h3>
-                        <p>Annual Cultural Program 2024</p>
-                    </div>
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="public/Rabindranath1.png" alt="Recitation Class">
-                    <div class="gallery-overlay">
-                        <h3>Recitation Classes</h3>
-                        <p>Learning Bengali Poetry</p>
-                    </div>
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="public/najrul1.png" alt="Workshop">
-                    <div class="gallery-overlay">
-                        <h3>Acting Workshop</h3>
-                        <p>Weekend Drama Session</p>
-                    </div>
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="public/hero.jpg" alt="Cultural Event">
-                    <div class="gallery-overlay">
-                        <h3>Cultural Events</h3>
-                        <p>Rabindra Jayanti Celebration</p>
-                    </div>
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="public/main.jpg" alt="Group Class">
-                    <div class="gallery-overlay">
-                        <h3>Group Sessions</h3>
-                        <p>Interactive Learning Environment</p>
-                    </div>
-                </div>
-                <div class="gallery-item fade-in">
-                    <img src="public/jibanananda1.png" alt="Award Ceremony">
-                    <div class="gallery-overlay">
-                        <h3>Award Ceremonies</h3>
-                        <p>Celebrating Student Achievements</p>
-                    </div>
+                <!-- Gallery items will be loaded from admin panel via Supabase -->
+                <div class="no-items-message">
+                    <i class="fas fa-spinner fa-spin"></i>
+                    <p>Loading gallery photos...</p>
                 </div>
             </div>
             <!-- Gallery Navigation -->
@@ -334,7 +297,7 @@
             <div class="gallery-pagination" id="galleryPagination"></div>
             <p class="gallery-note">
                 <i class="fas fa-info-circle"></i> 
-                Images are placeholders. You can replace them with your own photos of classes, performances, and events.
+                Gallery photos are managed through the admin panel. Upload photos to showcase your classes, performances, and events.
             </p>
         </div>
     </section>
@@ -619,8 +582,10 @@
                             <h3>Visit Us</h3>
                             <p>
                                 Anuranan Recitation Training Institute<br>
-                                [Your Address Here]<br>
-                                Kolkata, West Bengal, India
+                                Behala, Silpara<br>
+                                Behala 14 No<br>
+                                Behala Roy Bahadur RD
+
                             </p>
                         </div>
                     </div>
@@ -632,8 +597,8 @@
                         <div class="info-text">
                             <h3>Call Us</h3>
                             <p>
-                                +91 [Your Phone Number]<br>
-                                +91 [Alternate Number]
+                                +91 8910621825<br>
+                                +91 8017074226
                             </p>
                         </div>
                     </div>
@@ -645,8 +610,7 @@
                         <div class="info-text">
                             <h3>Email Us</h3>
                             <p>
-                                info@anuranan.in<br>
-                                contact@anuranan.in
+                                anurananinstitute@gmail.com<br>
                             </p>
                         </div>
                     </div>
@@ -667,9 +631,9 @@
                     <div class="social-links">
                         <h3>Follow Us</h3>
                         <div class="social-icons">
-                            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/arc008303" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                             <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/@snehasreebhore" class="social-icon"><i class="fab fa-youtube"></i></a>
                             <a href="#" class="social-icon"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
