--- a/admin/index.html
+++ b/admin/index.html
@@ -116,11 +116,18 @@
             <section id="gallery-management" class="management-section active">
                 <div class="section-header-admin">
                     <h2><i class="fas fa-images"></i> Gallery Management</h2>
-                    <button class="btn-add" id="addGalleryBtn">
-                        <i class="fas fa-plus"></i> Add Photo
-                    </button>
+                    <div style="display: flex; gap: 10px; align-items: center;">
+                        <button class="btn-refresh" id="refreshGalleryBtn" title="Refresh gallery">
+                            <i class="fas fa-sync-alt"></i> Refresh
+                        </button>
+                        <button class="btn-add" id="addGalleryBtn">
+                            <i class="fas fa-plus"></i> Add Photo
+                        </button>
+                    </div>
                 </div>
-
+                <div id="galleryStatusMessage" style="padding: 10px; margin-bottom: 10px; background: #e3f2fd; border-left: 4px solid #2196f3; border-radius: 4px; display: none;">
+                    <i class="fas fa-info-circle"></i> <span id="galleryStatusText"></span>
+                </div>
                 <div class="items-grid" id="galleryItemsGrid">
                     <!-- Gallery items will be loaded here -->
                     <div class="loading">
